--- a/app/assets/stylesheets/external/main.sass
+++ b/app/assets/stylesheets/external/main.sass
@@ -20,3 +20,21 @@
 @import template/seminare
 @import template/testimonial
 
+@import seminars
+
+
+main
+  margin-bottom: 80px
+  margin-top: 30px
+
+//@media (min-width: $screen-sm)
+//  main
+//    margin-top: 140px
+//
+//@media (min-width: $screen-md)
+//  main
+//    margin: 70px 70px 0
+//@media (min-width: $screen-lg)
+//  main
+//    margin: 70px 70px 0
+
