--- a/app/views/seminare/_categories.html.slim
+++ b/app/views/seminare/_categories.html.slim
@@ -2,7 +2,7 @@ ul.nav.nav-pills.nav-stacked.categories
   - categories.each do |category|
     li class=('active' if category == @category)
       = link_to category.display_name,
-              seminare_visitor_url(category_id: category.to_param, year: @year),
+              seminare_visitor_url(category_id: category.to_param),
               title: category.display_name
       - if category.children.any?
         = render 'seminare/categories', categories: category.children, current_path: current_path
