--- a/app/views/seminare/index.html.slim
+++ b/app/views/seminare/index.html.slim
@@ -1,8 +1,27 @@
 - content_for :page_title, 'Seminarübersicht'
+.container
+  = render 'search_form'
 
-ul.nav.nav-tabs.years
-  - @published_years.each do |year|
-    li class=('active' if year == @year.to_i) = link_to year, seminare_visitor_path(year: year)
-.row
-  .col-md-4 = render 'categories', categories: @catalog.categories.roots, current_path: @category&.path.to_a
-  .col-md-8 = render 'seminars_list', seminars: @seminars
+  / ul.nav.nav-tabs.years
+    - @published_years.each do |year|
+      li class=('active' if year == @year.to_i) = link_to year, seminare_visitor_path(year: year)
+
+  - path = @category&.path.to_a
+  - root = path.first
+  / ul.nav.nav-tabs.nav-justified
+    - Category.where(year: 2018).roots.order(:number).each do |cat|
+      li class=('active' if cat.in? path)
+        = link_to truncate(cat.display_name, length: 40), seminare_visitor_url(category_id: cat.to_param, year: 2018), title: cat.name
+        / = link_to cat.display_name, seminare_visitor_url(category_id: cat.to_param, year: 2018), title: cat.name
+
+  / ol.breadcrumb
+    - path.each do |category|
+      - if category == @category
+        li.active = category.display_name
+      -else
+        li = link_to category.display_name, seminare_visitor_url(category_id: category.to_param, year: @year)
+
+  h1 = root.display_name
+  .row
+    .col-md-4 = render 'categories', categories: root.children , current_path: path
+    .col-md-8 = render 'seminars_list', seminars: @seminars
