--- a/app/views/buchung/new.html.slim
+++ b/app/views/buchung/new.html.slim
@@ -1,85 +1,86 @@
 - page_title_for @booking
 - content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path, class: 'btn btn-default')
 
-- if @booking.errors.any?
-  .alert.alert-danger.alert-dismissable
-    button.close type="button" data-dismiss="alert"
-      span aria-hidden="true" &times;
-      span.sr-only Close
-    h4 = t('.error')
+.container
+  - if @booking.errors.any?
+    .alert.alert-danger.alert-dismissable
+      button.close type="button" data-dismiss="alert"
+        span aria-hidden="true" &times;
+        span.sr-only Close
+      h4 = t('.error')
 
 
-h3 Ich melde mich verbindlich für folgende Veranstaltung an:
-= render 'seminar'
+  h3 Ich melde mich verbindlich für folgende Veranstaltung an:
+  = render 'seminar'
 
-= simple_form_for(@booking, url: buchung_create_url, defaults: { label: false }) do |f|
-  = f.input :seminar_id, as: :hidden
+  = simple_form_for(@booking, url: buchung_create_url, defaults: { label: false }) do |f|
+    = f.input :seminar_id, as: :hidden
 
-  .row style="padding-top: 30px"
-    .col-md-8
-      fieldset
-        legend = Attendee.model_name.human(count: 2)
+    .row style="padding-top: 30px"
+      .col-md-8
+        fieldset
+          legend = Attendee.model_name.human(count: 2)
 
-        = f.simple_fields_for :attendees do |attendee_form|
-          - attendee = attendee_form.object
-          .attendee
-            .row
-              - if attendee_form.index > 0
-                a.btn.btn-danger.btn-xs.remove-attendee = fa_icon 'trash'
-              .col-md-4 = attendee_form.input :first_name
-              .col-md-4 = attendee_form.input :last_name
-              .col-md-4 = attendee_form.input :profession
+          = f.simple_fields_for :attendees do |attendee_form|
+            - attendee = attendee_form.object
+            .attendee
+              .row
+                - if attendee_form.index > 0
+                  a.btn.btn-danger.btn-xs.remove-attendee = fa_icon 'trash'
+                .col-md-4 = attendee_form.input :first_name
+                .col-md-4 = attendee_form.input :last_name
+                .col-md-4 = attendee_form.input :profession
 
-        .row
-          .col-md-1 = link_to fa_icon('plus', text: 'Teilnehmer hinzufügen'), '#',
-            class: 'add-attendee btn btn-default', tabindex: -1, title: 'Neuer Teilnehmer'
-      fieldset
-        legend Arbeitgeber
-        .row
-          .col-md-6 = f.input :company_title
-        .row
-          .col-md-5 = f.input :company_street
-          .col-md-2 = f.input :company_zip,  as: :tel
-          .col-md-5 = f.input :company_city
+          .row
+            .col-md-1 = link_to fa_icon('plus', text: 'Teilnehmer hinzufügen'), '#',
+              class: 'add-attendee btn btn-default', tabindex: -1, title: 'Neuer Teilnehmer'
+        fieldset
+          legend Arbeitgeber
+          .row
+            .col-md-6 = f.input :company_title
+          .row
+            .col-md-5 = f.input :company_street
+            .col-md-2 = f.input :company_zip,  as: :tel
+            .col-md-5 = f.input :company_city
 
-      fieldset
-        legend Kontakt
-        .row
-          .col-md-6 = f.input :contact_email,  as: :email, placeholder: '* E-Mail-Adresse'
-          .col-md-6 = f.input :contact_phone,  as: :tel,   placeholder: '* Telefon'
-          .col-md-6 = f.input :contact_fax,    as: :tel
-          .col-md-6 = f.input :contact_mobile, as: :tel
+        fieldset
+          legend Kontakt
+          .row
+            .col-md-6 = f.input :contact_email,  as: :email, placeholder: '* E-Mail-Adresse'
+            .col-md-6 = f.input :contact_phone,  as: :tel,   placeholder: '* Telefon'
+            .col-md-6 = f.input :contact_fax,    as: :tel
+            .col-md-6 = f.input :contact_mobile, as: :tel
 
-      fieldset
-        legend = Booking.human_attribute_name(:invoice_address)
-        .row
-          .col-md-6 = f.input :invoice_title, as: :text, input_html: { rows: 4 }
-        .row
-          .col-md-6 = f.input :invoice_street
-        .row
-          .col-md-2 = f.input :invoice_zip,  as: :tel
-          .col-md-4 = f.input :invoice_city
+        fieldset
+          legend = Booking.human_attribute_name(:invoice_address)
+          .row
+            .col-md-6 = f.input :invoice_title, as: :text, input_html: { rows: 4 }
+          .row
+            .col-md-6 = f.input :invoice_street
+          .row
+            .col-md-2 = f.input :invoice_zip,  as: :tel
+            .col-md-4 = f.input :invoice_city
 
-      fieldset
-        legend Paritätische
-        .row
-          .col-md-6 = f.input :member, label: t('.member')
-          .col-md-6 = f.input :member_institution, label: t('.member_institution')
-        .row
-          .col-md-4 = f.input :graduate, label: t('.graduate')
-          .col-md-4 = f.input :school, collection:t('bookings.schools'), include_blank: false
-          .col-md-4 = f.input :year
+        fieldset
+          legend Paritätische
+          .row
+            .col-md-6 = f.input :member, label: t('.member')
+            .col-md-6 = f.input :member_institution, label: t('.member_institution')
+          .row
+            .col-md-4 = f.input :graduate, label: t('.graduate')
+            .col-md-4 = f.input :school, collection:t('bookings.schools'), include_blank: false
+            .col-md-4 = f.input :year
 
-      fieldset
-        legend Bemerkungen
-        = f.input :comments, input_html: { rows: 4 }
+        fieldset
+          legend Bemerkungen
+          = f.input :comments, input_html: { rows: 4 }
 
-      fieldset
-        legend AGB
-        = f.input :terms_of_service, as: :boolean, required: true, label: t('.terms_of_service')
+        fieldset
+          legend AGB
+          = f.input :terms_of_service, as: :boolean, required: true, label: t('.terms_of_service')
 
-  .row.action-buttons
-    .col-md-8 = f.submit 'Jetzt anmelden', class: 'btn btn-primary btn-block btn-lg'
+    .row.action-buttons
+      .col-md-8 = f.submit 'Jetzt anmelden', class: 'btn btn-primary btn-block btn-lg'
 
 
 coffee:
