--- a/app/views/buchung/show.html.slim
+++ b/app/views/buchung/show.html.slim
@@ -1,8 +1,9 @@
 - content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path, class: 'btn btn-default')
 
-h2 Anmeldungsbestätigung
+.container
+  h2 Anmeldungsbestätigung
 
-= render 'seminar'
+  = render 'seminar'
 
-p = t('bookings.created')
+  p = t('bookings.created')
 
