--- a/app/views/layouts/external.html.slim
+++ b/app/views/layouts/external.html.slim
@@ -15,12 +15,9 @@ html.no-js lang="de"
     = javascript_include_tag 'external', 'data-turbolinks-track' => true
     == csrf_meta_tags
 
-    / link href="assets/css/bootstrap.min.css" rel="stylesheet" /
-    / link href="assets/css/main.css" rel="stylesheet" /
-  /! HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
-  /![if lt IE 9]
-      | <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script
-      | <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script
+    /[if IE 9]
+      script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"
+      script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"
   body
     == render 'layouts/external/navigation'
     main == yield
