--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -187,8 +187,7 @@
             span.seminar-date 27.10.2017
     /! - Col Rechts -
     .col-md-12
-      .cta
-        a.cta-btn href="#"  Weitere Seminare
+      .cta = link_to 'Weitere Seminare', seminare_visitor_url, class: 'cta-btn'
       .clearfix
 .container.testimonial
   .row
