--- a/app/views/seminare/_seminars_list.html.slim
+++ b/app/views/seminare/_seminars_list.html.slim
@@ -1,5 +1,5 @@
 - if seminars.bookable.any?
-  h4 Aktuelle Seminare
+  / h4 Aktuelle Seminare
   = render 'table', seminars: seminars.bookable, css_class: 'bookable'
 - if seminars.overdue.any?
   h4 Vergangene Seminare
