--- a/app/views/seminare/search.html.slim
+++ b/app/views/seminare/search.html.slim
@@ -1,4 +1,7 @@
 - content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, seminare_visitor_path, class: 'btn btn-default')
-.row
-  .col-md-4
-  .col-md-8 = render 'seminars_list', seminars: @seminars
+
+.container
+  = render 'search_form'
+  .row
+    .col-md-4
+    .col-md-8 = render 'seminars_list', seminars: @seminars
