--- a/app/views/layouts/admin/_navigation.html.slim
+++ b/app/views/layouts/admin/_navigation.html.slim
@@ -15,15 +15,16 @@ nav.navbar.navbar-inverse.navbar-fixed-top
           = link_to title_for_model(Seminar, with_icon: true), admin_seminars_url, tabindex: -1
         /li class=('active' if controller_name == 'bookings')
           = link_to title_for_model(Booking, with_icon: true), bookings_url, tabindex: -1
-        / - if policy(Page).index?
-          li class=('active' if controller_name == 'pages')
-            = link_to title_for_model(Page, with_icon: true), pages_url, tabindex: -1
         - if policy(Attendee).index?
           li class=('active' if controller_name == 'attendees')
             = link_to title_for_model(Booking, with_icon: true), admin_attendees_url, tabindex: -1
         - if policy(Invoice).index?
           li class=('active' if controller_name == 'invoices')
             = link_to title_for_model(Invoice, with_icon: true), admin_invoices_url, tabindex: -1
+        = navbar_dropdown 'Homepage', active: controller_name.in?(%w(pages)) do
+          - if policy(Page).index?
+            li class=('active' if controller_name == 'pages')
+              = link_to title_for_model(Page, with_icon: true), admin_pages_url, tabindex: -1
         = navbar_dropdown 'Stammdaten', active: controller_name.in?(%w(catalogs categories locations teachers companies users)) do
           - if policy(Catalog).index?
             li class=('active' if controller_name == 'catalogs')
