--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -1,5 +1,7 @@
 .container.bereich-block
-  h1 = @page.title
+  .row
+    .col-md-9
+      h1 = @page.title
 
-  .page-teaser  == @page.teaser
-  .page-content == @page.content
+      .page-teaser  == @page.teaser
+      .page-content == @page.content
