root category switch for external seminars

--- a/app/assets/stylesheets/external/basic/_general.sass
+++ b/app/assets/stylesheets/external/basic/_general.sass
@@ -154,6 +154,7 @@ input.cta-btn
   font-family: $font-sans
   display: inline-block
   text-align: center
+  margin-top: 15px
   font-weight: bold
 
   @media (max-width: 768px)
