--- a/app/assets/stylesheets/external/template/_seminare.sass
+++ b/app/assets/stylesheets/external/template/_seminare.sass
@@ -1,3 +1,17 @@
+.root-categories
+  display: flex
+  align-items: stretch
+  justify-content: space-between
+  margin-bottom: 30px
+
+  a
+    width: 32%
+
+  @media (max-width: 768px)
+    display: block
+    a
+      width: 100%
+
 .seminar
   justify-content: space-between
   align-items: center
