--- a/app/views/seminare/index.html.slim
+++ b/app/views/seminare/index.html.slim
@@ -1,4 +1,7 @@
 - content_for :page_title, 'Seminarübersicht'
+- path = @category&.path.to_a
+- root = path.first
+
 .container
   = render 'search_form'
 
@@ -6,8 +9,12 @@
     - @published_years.each do |year|
       li class=('active' if year == @year.to_i) = link_to year, seminare_visitor_path(year: year)
 
-  - path = @category&.path.to_a
-  - root = path.first
+
+  .root-categories
+    - Category.where(year: @year).roots.each do |category|
+      - klass = category.in?(path) ? 'cta-btn' : 'sec-cta-btn'
+      = link_to category.display_name, seminare_visitor_url(category_id: category.to_param), class: klass
+
   / ul.nav.nav-tabs.nav-justified
     - Category.where(year: 2018).roots.order(:number).each do |cat|
       li class=('active' if cat.in? path)
@@ -21,7 +28,7 @@
       -else
         li = link_to category.display_name, seminare_visitor_url(category_id: category.to_param, year: @year)
 
-  h1 = root.display_name
-  .row
-    .col-md-4 = render 'categories', categories: root.children , current_path: path
-    .col-md-8 = render 'seminars_list', seminars: @seminars
+  - if @category
+    .row
+      .col-md-4 = render 'categories', categories: root.children , current_path: path
+      .col-md-8 = render 'seminars_list', seminars: @seminars
