--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -51,7 +51,10 @@
         h2 FORT- UND WEITERBILDUNG
         .img-container
         .bereich-content
-          p Mit unserem Weiterbildungsangebot steht Ihnen ein Weiterbildungstool zur Verfügung, mit dem Sie, Ihre Mitarbeiter/innen aktuell und flexibelentsprechend Ihrer individuellen Personalentwicklungsbedarfe zu qualifizieren
+          p
+            |
+              Wir qualifizieren insbesondere Hilfs-, Fach- und Führungskräfte aus sozialen Einrichtungen.
+              Nutzen Sie unsere Kompetenzen und langjährigen Erfahrungen und planen Sie Ihre Weiterbildung mit uns!
         .cta
           a.cta-btn href="#"  Mehr Informationen
     .col-md-4.desktop-only
@@ -75,7 +78,12 @@
         h2 QUEREINSTIEG
         .img-container
         .bereich-content
-          p Das Bundesmodellprojekt QUEREINSTIEG bietet in zwei Modelljahrgängen je 25 Ausbildungsplätze für Berufsumsteiger/innen, die in den Erzieher/innen-Beruf wechseln möchten.
+          p
+            |
+              Im Bundesmodellprojekt „Quereinstieg – Männer und Frauen in Kitas“ absolvieren bei uns
+              derzeit 41 Berufsumsteiger*innen eine Ausbildung zum*zur staatlich anerkannten
+              Erzieher*in. Haben Sie auch schon einmal daran gedacht, in den Erzieher*innen-Beruf
+              zu wechseln?
         .cta
           a.cta-btn href="#"  Mehr Informationen
     .mobile-only.accordion-bereich.col-md-12
@@ -158,7 +166,7 @@
     .col-md-12
       .cta = link_to 'Weitere Seminare', seminare_visitor_url, class: 'cta-btn'
       .clearfix
-.container.testimonial
+/ .container.testimonial
   .row
     .col-md-12
       h2 DAS SAGEN UNSERE WEITERBILDUNGS- UND AUSBILDUNGSTEILNEHMER/INNEN
