homepage first slider image

--- a/app/assets/stylesheets/external/template/_slider.sass
+++ b/app/assets/stylesheets/external/template/_slider.sass
@@ -50,42 +50,32 @@
   .container-nav
     margin-top: -30px
 
-  .slider1
+  .slide
     width: 100%
     height: 400px
-    background: image-url("slide-1.jpg") center
     background-size: cover
 
     @media (max-width: 767px)
       display: none
+
+  .slide1
+    background: image-url("slider/slide-1.jpg") center
 
     .text-bar
       border-left: 4px solid $blue
 
-  .slider2
-    width: 100%
-    height: 400px
-    background: image-url("slide-2.jpg") center
-    background-size: cover
+  .slide2
+    background: image-url("slider/Slider-2.jpg") center
     position: absolute
     top: 0
-
-    @media (max-width: 767px)
-      display: none
 
     .text-bar
       border-left: 4px solid $red
 
-  .slider3
-    width: 100%
-    height: 400px
-    background: image-url("slide-3.jpg") center
-    background-size: cover
+  .slide3
+    background: image-url("slider/Slider-3.jpg") center
     position: absolute
     top: 0
-
-    @media (max-width: 767px)
-      display: none
 
     .text-bar
       border-left: 4px solid $blue
