--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,5 +1,5 @@
 .slider
-  .slider1
+  .slide.slide1
     .container
       .row
         .col-lg-12
@@ -14,7 +14,7 @@
             .circle>
             .circle>
             .circle>
-  .slider2
+  / .slide.slide2
     .container
       .row
         .col-lg-12
@@ -29,7 +29,7 @@
             .circle
             .circle
             .circle
-  .slider3
+  / .slide.slide3
     .container
       .row
         .col-lg-12
