--- a/app/assets/stylesheets/external/template/_slider.sass
+++ b/app/assets/stylesheets/external/template/_slider.sass
@@ -4,7 +4,7 @@
   @media (max-width: 767px)
     height: 8.75rem
     background-size: cover
-    background: image-url("slide-s.jpg") no-repeat top center
+    background: image-url("slider/slide-1.jpg") no-repeat top center
     overflow: hidden
 
   h1
