--- a/app/views/admin/pages/_form.html.slim
+++ b/app/views/admin/pages/_form.html.slim
@@ -7,7 +7,7 @@
       h4 = t('.error')
 
   = f.input :title
-  = f.input :slug, disabled: true
+  = f.input :slug
   = f.input :published
   = f.input :teaser,  input_html: { class: 'editor' }
   = f.input :content, input_html: { class: 'editor' }
