--- a/app/views/application/page_not_found.html.slim
+++ b/app/views/application/page_not_found.html.slim
@@ -1,5 +1,7 @@
-h1 Diese Seite konnte nicht gefunden werden
+.container
 
-p
-  | Zurück zur
-  =< link_to 'Startseite', root_url
+  h1 Diese Seite konnte nicht gefunden werden
+
+  p
+    | Zurück zur
+    =< link_to 'Startseite', root_url
