--- a/app/views/layouts/external/_navigation.html.slim
+++ b/app/views/layouts/external/_navigation.html.slim
@@ -1,4 +1,7 @@
-nav
+sass:
+  body
+    padding-top: 70px
+nav.navbar.navbar-default.navbar-fixed-top
   .container.nav-100
     .navbar-header
       button.navbar-toggle.collapsed type="button" data={ toggle: 'collapse', target: '#navbar-collapse' } aria-expanded="false"
@@ -6,86 +9,48 @@ nav
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href=root_url = image_tag 'pbw-logo.png', alt: 'Paritätisches Bildungswerk Sachsen Anhalt'
+      a.navbar-brand href=root_url
 
     #navbar-collapse.collapse.navbar-collapse
-      / ul.nav.navbar-nav.navbar-right
-        li = link_to 'WIR ÜBER UNS', "http://bildungswerk-lsa.de/index.php?article_id=22"
-        li = link_to 'TEAM', "http://bildungswerk-lsa.de/index.php?article_id=42"
-        li = link_to 'FORT- & WEITERBILDUNG', seminare_visitor_path
-        li = link_to 'AUSBILDUNG', 'http://bildungswerk-lsa.de/index.php?article_id=44'
       ul.nav.navbar-nav.navbar-right
-        li.dropdown
+        li.dropdown class=('active' if request.path =~ /\A\/bildungswerk/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Bildungswerk
           ul.dropdown-menu.dropdown-menu.menu-items
-            li = link_to 'Unser Profil', profil_bildungswerk_url
-            li = link_to 'Team', team_bildungswerk_url
-            li = link_to 'Standorte', standorte_bildungswerk_url
-        / li.dropdown
+            - links = { 'Unser Profil' => 'profil', 'Team' => 'team', 'Standorte' => 'standorte' }
+            - links.each do |label, path|
+              - path = "/bildungswerk/#{path}"
+              li class=('active' if request.path == path) = link_to label, path
+        li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/(fort-und-weiterbildung|seminare)/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Fort- und Weiterbildung
-          ul.dropdown-menu.dropdown-menu.menu-items
-            - Category.where(year: 2018).roots.order(:number).each do |cat|
-              li = link_to cat.display_name, seminare_visitor_url(category_id: cat.id, year: 2018)
-        li.dropdown
-          a.dropdown-toggle.yellow-hov href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
-            | Fort- und Weiterbildung
-          ul.dropdown-menu.megamenu
-            li
-              ul.menu-items.mm-left
-                li.title Fort- und Weiterbildung
-                - Category.where(year: 2018).roots.order(:number).each do |cat|
-                  li = link_to cat.display_name, seminare_visitor_url(category_id: cat.to_param, year: 2018)
-              ul.menu-items.mm-right
-                li.title Informationen
-                li = link_to 'Serviceangebote', '#'
-                li = link_to 'Fananzierungsmöglichkeiten', '#'
-                li = link_to 'Team', '#'
-        li.dropdown
-          a.dropdown-toggle.yellow-hov href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
+          ul.dropdown-menu.menu-items
+            - Catalog.published.pluck(:year).select { |year| year >= Date.current.year }.sort.each do |year|
+              li class=('active' if request.path == "/seminare/#{year}")
+                = link_to "Seminare #{year}", seminare_visitor_url(year: year)
+            - links = { 'Serviceangebote' => 'service', 'Finanzierungsmöglichkeiten' => 'finanzierung', 'Team' => 'team'}
+            - links.each do |label, path|
+              - path = "/fort-und-weiterbildung/#{path}"
+              li class=('active' if request.path == path) = link_to label, path
+        li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/ausbildung/)
+          a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Ausbildung
-          ul.dropdown-menu.ausbildung.megamenu
-            li
-              ul.menu-items.mm-left
-                li.title Ausbildungsbereiche
-                li = link_to 'Heilpädagogik', '#'
-                li = link_to 'Heilerziehungspflege', '#'
-                li = link_to 'Erzieher/in', '#'
-                li = link_to 'Quereinstieg', '#'
-              ul.menu-items.mm-right
-                li.title Informationen
-                li = link_to 'Aktuelles', '#'
-                li = link_to 'Fananzierungsmöglichkeiten', '#'
-                li = link_to 'Team', '#'
-                li = link_to 'Standorte', '#'
-        li.dropdown
+          ul.dropdown-menu.menu-items
+            - links =  { 'Heilpädagogik' => 'heilpaedagogik', 'Heilerziehungspflege' => 'heilerziehungspflege', 'Erzieher*in' => 'erzieher' }
+            - links.each do |label, path|
+              - path = "/ausbildung/#{path}"
+              li class=('active' if request.path == path) = link_to label, path
+        li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/quereinstieg/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Quereinstieg
           ul.dropdown-menu.menu-items
-            li = link_to 'Projekt', '#'
-            li = link_to 'Aktuelles', '#'
-            li = link_to 'Team', '#'
-            li = link_to 'Standorte', '#'
-            li = link_to 'Projektpartner', '#'
-
-          / a.dropdown-toggle.yellow-hov href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
-          /   | Quereinstieg
-          / ul.dropdown-menu.quereinstieg.megamenu
-            li
-              / ul.menu-items.mm-left
-                li.title Quereinstieg
-                li = link_to 'Ausbildung zum/zur Staatlich anerkannten Erzieher/in', '#'
-              ul.menu-items.mm-left
-                li.title Informationen
-                li = link_to 'Projekt', '#'
-                li = link_to 'Aktuelles', '#'
-                li = link_to 'Team', '#'
-                li = link_to 'Standorte', '#'
-                li = link_to 'Prokektpartner', '#'
-        li.dropdown
+            - links = { 'Projekt' => 'projekt', 'Team' => 'team', 'Standorte' => 'standorte', 'Projektpartner' => 'projektpartner' }
+            - links.each do |label, path|
+              - path = "/quereinstieg/#{path}"
+              li class=('active' if request.path == path) = link_to label, path
+        li.dropdown class=('active' if request.path =~ /\A\/kontakt|\A\/standorte/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Kontakt
           ul.dropdown-menu.menu-items
-            li = link_to 'Kontakt', page_url('kontakt')
-            li = link_to 'Standorte', '#'
+            li = link_to 'Kontakt', '/kontakt'
+            li = link_to 'Standorte', '/standorte'
