--- a/app/views/pages/static/quereinstieg/standorte.html.slim
+++ b/app/views/pages/static/quereinstieg/standorte.html.slim
@@ -1,2 +1,11 @@
 .container.bereich-block
   h1 Standorte
+
+  .row
+    .col-md-8
+      p Die Ausbildung findet an der PARITÄTISCHEN Fachschule für Sozialpädagogik (staatlich
+        anerkannte Ersatzschule) in Aschersleben, Dr.-Wilhelm-Külz-Platz 10, statt.
+        Als Schulstandort wird eine denkmalgeschützte Villa, die im Jahr 2000 saniert wurde, genutzt.
+        Die Schule ist verkehrsgünstig gelegen und gut per Bahn und Auto zu erreichen.
+      p Die Geschäftsstelle des Projektes „Quereinstieg“ finden Sie im PARITÄTISCHEN Bildungswerk
+        Sachsen-Anhalt in der Wiener Str. 2 in Magdeburg.
