--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,4 +1,5 @@
 doctype html
+/ html lang=@page.language_code
 html.no-js lang="de"
   head
     meta charset="utf-8" /
@@ -10,6 +11,7 @@ html.no-js lang="de"
         | - #{content_for :page_title}
     meta content=content_for(:page_description) name="description"
 
+    = render 'alchemy/pages/meta_data'
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     == csrf_meta_tags
@@ -21,6 +23,7 @@ html.no-js lang="de"
     == render 'layouts/external/navigation'
     main == yield
     == render 'layouts/external/footer'
+    = render 'alchemy/edit_mode'
 
     coffee:
       $ ->
